Add Tom to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Jarno Rantaharju, j.m.o.rantaharju@swansea.ac.uk
 Seyong Kim, skim@sejong.ac.kr
 Ed Bennett, e.j.bennett@swansea.ac.uk
+Tom Pritchard, t.d.pritchard@swansea.ac.uk
