add Xin and Thor as authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@ Jarno Rantaharju, j.m.o.rantaharju@swansea.ac.uk
 Seyong Kim, skim@sejong.ac.kr
 Ed Bennett, e.j.bennett@swansea.ac.uk
 Tom Pritchard, t.d.pritchard@swansea.ac.uk
+Xin Li, lxin@kth.se
+Thor Wikfeldt, kthw@kth.se
